--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body class="body">
     
-    <header>
-    <div class="container">
+    <header class="header" id="header">
+        <div class="container">
         <nav class="header-nav">
 
             <a href="./index.html" class="header-menu-link">Web<span class="header-span">Studio</span>
@@ -38,16 +38,15 @@
                 </li>
             </ul>
             </address>
-
+        </div>
     </header>
-    </div>
 
     <main>
         <!-- Section one -->
 
-        <section class="main">
+        <section class="main section">
 
-        <div class="container">
+        <div class="container main-container">
             <h1 class="main-title">Effective Solutions for Your Business</h1>
 
             <button type="button" class="main-button">Order Service</button>
@@ -56,7 +55,7 @@
 
         <!-- Section two -->
 
-        <section>
+        <section class="description section">
 
         <div class="container">
             <h2 hidden>whatever</h2>
@@ -88,7 +87,7 @@
 
         <!-- Section three -->
 
-        <section class="members">
+        <section class="members section">
 
         <div class="container">
             <h2 class="members-title">Our Team</h2>
@@ -98,7 +97,8 @@
                         src="./images/mark.jpg" 
                         alt="Mark Guerrero"
                         width="264"
-                        height="260" />
+                        height="260"
+                        class="members-img"/>
 
                         <h3 class="card-subtitle">Mark Guerrero</h3>
                         <p class="card-item">Product Designer</p>
@@ -109,7 +109,8 @@
                         src="./images/tom.jpg" 
                         alt="Tom Ford"
                         width="264"
-                        height="260" />
+                        height="260"
+                        class="members-img"/>
 
                         <h3 class="card-subtitle">Tom Ford</h3>
                         <p class="card-item">Frontend Developer</p>
@@ -120,7 +121,8 @@
                         src="./images/camila.jpg" 
                         alt="Camila Garcia"
                         width="264"
-                        height="260" />
+                        height="260"
+                        class="members-img"/>
 
                         <h3 class="card-subtitle">Camila Garcia</h3>
                         <p class="card-item">Marketing</p>
@@ -131,7 +133,8 @@
                         src="./images/daniel.jpg" 
                         alt="Daniel Wilson"
                         width="264"
-                        height="260" />
+                        height="260"
+                        class="members-img"/>
 
                         <h3 class="card-subtitle">Daniel Wilson</h3>
                         <p class="card-item">UI Designer</p>
@@ -142,7 +145,7 @@
 
         <!-- Section four -->
 
-        <section class="portfolio">
+        <section class="portfolio section">
 
         <div class="container">
             <h2 class="portfolio-title">Our Portfolio</h2>
