footer and header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="body">
     
     <header class="header" id="header">
-        <div class="container">
+        <div class="container header-container">
         <nav class="header-nav">
 
             <a href="./index.html" class="header-menu-link">Web<span class="header-span">Studio</span>
@@ -47,10 +47,10 @@
         <section class="main section">
 
         <div class="container main-container">
-            <h1 class="main-title">Effective Solutions for Your Business</h1>
-
-            <button type="button" class="main-button">Order Service</button>
-        </section>
+                <h1 class="main-title">Effective Solutions for Your Business</h1>
+    
+                <button type="button" class="main-button">Order Service</button>
+            </section>
         </div>
 
         <!-- Section two -->
