--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <section class="members section">
 
-        <div class="container">
+        <div class="container members-container">
             <h2 class="members-title">Our Team</h2>
                 <ul class="members-cards">
                     <li class="members-item">
