--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <section class="description section">
 
         <div class="container">
-            <h2 .visually-hidden>whatever</h2>
+            <h2 visually-hidden>whatever</h2>
             <ul class="description-list">
                 <li class="description-li">
                     <h3 class="description-subtitle">Strategy</h3>
@@ -147,7 +147,7 @@
 
         <section class="portfolio section">
 
-        <div class="container">
+        <div class="container portfolio-container">
             <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
