--- a/index.html
+++ b/index.html
@@ -159,10 +159,11 @@
                         height="300"
                         class="portfolio-foto"
                         >
+                    <div class="portfolio-div">    
                         <h3 class="portfolio-subtitle">Banking App</h3>
                         <p class="portfolio-text">App</p>
+                    </div>
                     </li>
-
                     <li class="portfolio-item">
                     <img 
                         src="./images/cashless-payment.jpg" 
@@ -171,8 +172,10 @@
                         height="300"
                         class="portfolio-foto"
                         >
+                    <div class="portfolio-div">
                         <h3 class="portfolio-subtitle">Cashless Payment</h3>
                         <p class="portfolio-text">Marketing</p>
+                    </div>
                     </li>
 
                     <li class="portfolio-item">
@@ -183,8 +186,10 @@
                         height="300"
                         class="portfolio-foto"
                         >
+                    <div class="portfolio-div">
                         <h3 class="portfolio-subtitle">Meditation App</h3>
                         <p class="portfolio-text">App</p>
+                    </div>
                     </li>
 
                     <li class="portfolio-item">
@@ -195,8 +200,10 @@
                         height="300"
                         class="portfolio-foto"
                         >
+                    <div class="portfolio-div">
                         <h3 class="portfolio-subtitle">Taxi Service</h3>
                         <p class="portfolio-text">Marketing</p>
+                    </div>
                     </li>
 
                     <li class="portfolio-item">
@@ -207,8 +214,10 @@
                         height="300"
                         class="portfolio-foto"
                         >
+                    <div class="portfolio-div">
                         <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                         <p class="portfolio-text">Design</p>
+                    </div>
                     </li>
 
                     <li class="portfolio-item">
@@ -219,8 +228,10 @@
                         height="300"
                         class="portfolio-foto"
                         >
+                    <div class="portfolio-div">
                         <h3 class="portfolio-subtitle">Online Courses</h3>
                         <p class="portfolio-text">Marketing</p>
+                    </div>
                     </li>
                 </ul>
         </div>
