--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
                         width="264"
                         height="260"
                         class="members-img"/>
-
+                    <div class="members-div">
                         <h3 class="card-subtitle">Mark Guerrero</h3>
                         <p class="card-item">Product Designer</p>
+                    </div>
                     </li>
 
                     <li class="members-item">
@@ -112,9 +113,10 @@
                         width="264"
                         height="260"
                         class="members-img"/>
-
+                    <div class="members-div">
                         <h3 class="card-subtitle">Tom Ford</h3>
                         <p class="card-item">Frontend Developer</p>
+                    </div>
                     </li>
 
                     <li class="members-item">
@@ -124,9 +126,10 @@
                         width="264"
                         height="260"
                         class="members-img"/>
-
+                    <div class="members-div">
                         <h3 class="card-subtitle">Camila Garcia</h3>
                         <p class="card-item">Marketing</p>
+                    </div>
                     </li>
 
                     <li class="members-item">
@@ -136,9 +139,10 @@
                         width="264"
                         height="260"
                         class="members-img"/>
-
+                    <div class="members-div">
                         <h3 class="card-subtitle">Daniel Wilson</h3>
                         <p class="card-item">UI Designer</p>
+                    </div>
                     </li>
                 </ul>
         </div>
